--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>flappyBird</groupId>
-    <artifactId>flappy</artifactId>
-    <version>8.8.3</version>
+    <groupId>flappy</groupId>
+    <artifactId>flappyBird</artifactId>
+    <version>2.0</version>
     <packaging>jar</packaging>
 
     <build>
